[package]
name = "au92-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.2", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "rt",
    "macros",
    "net",
    "io-util",
    "fs",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9"
pulldown-cmark = "0.12.2"
anyhow = "1.0.95"
thiserror = "2.0.11"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tera = "1.20.0"
chrono = "0.4.39"
scraper = "0.22.0"
once_cell = "1.20.2"
pulldown-cmark-toc = "0.6.0"
pinyin = "0.10.0"
toml = "0.8.19"

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = "abort" # Abort on panic

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
